finished the header and footer partials

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,7 @@
 <header>
   <h1>{{Header}}</h1>
-  p
+  <p>This is the header!</p>
   <p><a href="/">Home</a></p>
+  <p>lol more stuff</p>
   <p><a href="/about">about</a></p>
 </header>
