--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <header>
-  <h1>{{Header}}</h1>
+  <h1>{{yell pageTitle}}</h1>
   <p>This is the header!</p>
   <p><a href="/">Home</a></p>
   <p>lol more stuff</p>
